[gd_scene load_steps=38 format=2]

[ext_resource path="res://images/card/0.png" type="Texture" id=1]
[ext_resource path="res://images/card/selected.png" type="Texture" id=2]
[ext_resource path="res://VT323-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://CardQueue.gd" type="Script" id=4]
[ext_resource path="res://Battleground.gd" type="Script" id=5]
[ext_resource path="res://images/battle/ground.png" type="Texture" id=6]
[ext_resource path="res://images/battle/platform.png" type="Texture" id=7]
[ext_resource path="res://images/ui/health.png" type="Texture" id=8]
[ext_resource path="res://3dbg.tscn" type="PackedScene" id=9]
[ext_resource path="res://images/battle/MC_dash.png" type="Texture" id=10]
[ext_resource path="res://images/battle/MC_float2.png" type="Texture" id=11]
[ext_resource path="res://images/battle/MC_idle.png" type="Texture" id=12]
[ext_resource path="res://images/battle/MC_float.png" type="Texture" id=13]
[ext_resource path="res://MC.gd" type="Script" id=14]
[ext_resource path="res://images/battle/FX_Shield0001.png" type="Texture" id=16]
[ext_resource path="res://images/battle/FX_Shield0002.png" type="Texture" id=17]
[ext_resource path="res://images/battle/FX_Shield0003.png" type="Texture" id=18]
[ext_resource path="res://images/battle/FX_Shield0007.png" type="Texture" id=19]
[ext_resource path="res://images/battle/FX_Shield0008.png" type="Texture" id=20]
[ext_resource path="res://images/battle/FX_Shield0009.png" type="Texture" id=21]
[ext_resource path="res://images/battle/FX_Shield0005.png" type="Texture" id=22]
[ext_resource path="res://images/battle/FX_Shield0006.png" type="Texture" id=23]
[ext_resource path="res://images/battle/FX_Shield0004.png" type="Texture" id=24]
[ext_resource path="res://Shield.gd" type="Script" id=25]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float size_x = 0.008;
uniform float size_y = 0.008;

void fragment() {
	vec2 uv = UV;
	uv -= mod(uv, vec2(size_x, size_y));
	
	COLOR.rgb = textureLod(TEXTURE, uv, 0.0).rgb;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/size_x = 0.008
shader_param/size_y = 0.008

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 69.0057, 432.002 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1142.79, 38.0387 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 101.258, 15.6052 )

[sub_resource type="Animation" id=6]
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Ground:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.392157, 0.72549, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlatformL:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.392157, 0.72549, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlatformR:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.392157, 0.72549, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 11 ) ],
"loop": true,
"name": "hover",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "dash",
"speed": 5.0
} ]

[sub_resource type="Animation" id=8]
resource_name = "default"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.2, 1.2 ), Vector2( 1.2, 1.25 ), Vector2( 1.2, 1.2 ) ]
}

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 23.7382, 3.1655 )

[sub_resource type="CapsuleShape2D" id=10]
radius = 23.7015
height = 30.7853

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 24 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 20 ), ExtResource( 19 ), ExtResource( 23 ), ExtResource( 22 ), ExtResource( 24 ), ExtResource( 18 ), ExtResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="DynamicFont" id=12]
size = 36
outline_color = Color( 0.898039, 1, 0.00392157, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=13]
size = 36
font_data = ExtResource( 3 )

[node name="Battleground" type="Node2D"]
position = Vector2( 1.12245, 0 )
script = ExtResource( 5 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 960, 720 )
own_world = true
transparent_bg = true

[node name="3dbg" parent="Viewport" instance=ExtResource( 9 )]

[node name="Viewport_Sprite" type="Sprite" parent="."]
material = SubResource( 2 )
position = Vector2( 480, 360 )

[node name="BulletKiller" type="Area2D" parent="."]
position = Vector2( -39.1996, 270.833 )
collision_layer = 20
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletKiller"]
position = Vector2( -106.908, 7.1272 )
shape = SubResource( 3 )

[node name="BulletKiller2" type="Area2D" parent="."]
position = Vector2( 1199.15, 258.361 )
collision_layer = 20
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletKiller2"]
position = Vector2( -106.908, 7.1272 )
shape = SubResource( 3 )

[node name="BulletKiller3" type="Area2D" parent="."]
position = Vector2( 514.939, -5.34531 )
rotation = 1.5708
scale = Vector2( 1, 2 )
collision_layer = 20
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletKiller3"]
position = Vector2( -106.908, 7.1272 )
shape = SubResource( 3 )

[node name="BulletKiller4" type="Area2D" parent="."]
position = Vector2( 481.678, 700.162 )
rotation = 1.5708
scale = Vector2( 1, 2 )
collision_layer = 20
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletKiller4"]
position = Vector2( -106.908, 7.1272 )
shape = SubResource( 3 )

[node name="Ground" type="Sprite" parent="."]
modulate = Color( 0.918954, 0.963399, 1, 1 )
position = Vector2( 480, 700 )
texture = ExtResource( 6 )

[node name="Collision" type="Area2D" parent="Ground"]
position = Vector2( -7.4162, -178.644 )
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground/Collision"]
position = Vector2( 1.49835, 34.0206 )
shape = SubResource( 4 )

[node name="PlatformL" type="Sprite" parent="."]
modulate = Color( 0.918954, 0.963399, 1, 1 )
position = Vector2( 180, 360 )
scale = Vector2( 0.6, 0.4 )
texture = ExtResource( 7 )

[node name="Collision" type="Area2D" parent="PlatformL"]
position = Vector2( 5.6842, 2.59229 )
scale = Vector2( 1.66667, 2.5 )
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlatformL/Collision"]
position = Vector2( -4.8656, 2.90787 )
shape = SubResource( 5 )

[node name="PlatformR" type="Sprite" parent="."]
modulate = Color( 0.918954, 0.963399, 1, 1 )
position = Vector2( 780, 360 )
scale = Vector2( 0.6, 0.4 )
texture = ExtResource( 7 )

[node name="Collision" type="Area2D" parent="PlatformR"]
position = Vector2( 9.776, 4.36005 )
scale = Vector2( 1.66667, 2.5 )
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlatformR/Collision"]
position = Vector2( -4.8656, 2.90787 )
shape = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/bg = SubResource( 6 )

[node name="MC" type="AnimatedSprite" parent="."]
position = Vector2( 478, 472 )
scale = Vector2( 1.2, 1.2 )
frames = SubResource( 7 )
script = ExtResource( 14 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="MC"]
anims/default = SubResource( 8 )

[node name="Foot" type="Area2D" parent="MC"]
position = Vector2( -2.09985, 39.8976 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="MC/Foot"]
position = Vector2( 1.66855, 2.78094 )
shape = SubResource( 9 )

[node name="Body" type="Area2D" parent="MC"]
position = Vector2( -0.589233, -9.42807 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="MC/Body"]
position = Vector2( -1.17853, 12.3744 )
shape = SubResource( 10 )

[node name="Shield" type="AnimatedSprite" parent="MC"]
visible = false
modulate = Color( 1, 1, 1, 0.501961 )
frames = SubResource( 11 )
frame = 10
playing = true
script = ExtResource( 25 )

[node name="CardQueue" type="Node2D" parent="."]
position = Vector2( 178.878, 460 )
script = ExtResource( 4 )

[node name="selected" type="Sprite" parent="CardQueue"]
position = Vector2( 226.582, 171.449 )
scale = Vector2( 1.2, 1.1 )
texture = ExtResource( 2 )

[node name="selected2" type="Sprite" parent="CardQueue"]
position = Vector2( 105.878, 171.044 )
scale = Vector2( 1.2, 1.1 )
texture = ExtResource( 2 )

[node name="Label2" type="Label" parent="CardQueue"]
margin_left = 189.393
margin_top = 62.0
margin_right = 259.393
margin_bottom = 99.0
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0.968627, 1, 0, 1 )
text = "RIGHT"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CardQueue"]
margin_left = 78.3926
margin_top = 62.0
margin_right = 134.393
margin_bottom = 99.0
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0.968627, 1, 0, 1 )
text = "LEFT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot1" type="Sprite" parent="CardQueue"]
visible = false
position = Vector2( 587.5, 170 )
texture = ExtResource( 1 )

[node name="Slot2" type="Sprite" parent="CardQueue"]
visible = false
position = Vector2( 467.5, 170 )
texture = ExtResource( 1 )

[node name="Slot3" type="Sprite" parent="CardQueue"]
visible = false
modulate = Color( 1, 1, 1, 0.498039 )
position = Vector2( 347.5, 170 )
texture = ExtResource( 1 )

[node name="Slot4" type="Sprite" parent="CardQueue"]
visible = false
modulate = Color( 1, 1, 1, 0.25098 )
position = Vector2( 227.5, 170 )
texture = ExtResource( 1 )

[node name="Slot5" type="Sprite" parent="CardQueue"]
visible = false
modulate = Color( 1, 1, 1, 0.25098 )
position = Vector2( 106, 170 )
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="CardQueue"]

[node name="Level" type="Label" parent="."]
margin_left = 840.0
margin_right = 938.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 13 )
text = "LEVEL 0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
margin_left = 840.0
margin_top = 40.0
margin_right = 938.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 13 )
text = "0 / 10"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="Node2D" parent="."]

[node name="0" type="Sprite" parent="Health"]
visible = false
position = Vector2( 40, 40 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="1" type="Sprite" parent="Health"]
visible = false
position = Vector2( 98.8775, 40 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="2" type="Sprite" parent="Health"]
visible = false
position = Vector2( 158.878, 40 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="3" type="Sprite" parent="Health"]
visible = false
position = Vector2( 218.878, 40 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="4" type="Sprite" parent="Health"]
visible = false
position = Vector2( 278.878, 40 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="5" type="Sprite" parent="Health"]
visible = false
position = Vector2( 338.878, 40 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="6" type="Sprite" parent="Health"]
visible = false
position = Vector2( 398.878, 40 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )
[connection signal="area_entered" from="MC/Foot" to="MC" method="_on_Foot_area_entered"]
[connection signal="area_entered" from="MC/Body" to="MC" method="_on_Body_area_entered"]
